--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</ul>
 		</nav>
 	</header>
-	
+
 	<div class="float-container">
 		<div class="float-child">
 			<div class="description">
@@ -38,11 +38,28 @@
 			<p>My God <br><br>
 			You actually found my website<br><br>
 			Im actully not sure what to put here so<br><br>
-			What the fuck did you just fucking say about me, you little bitch? I'll have you know I graduated top of my class in the Navy Seals, and I've been involved in numerous secret raids on Al-Quaeda, and I have over 300 confirmed kills. I am trained in gorilla warfare and I'm the top sniper in the entire US armed forces. You are nothing to me but just another target. I will wipe you the fuck out with precision the likes of which has never been seen before on this Earth, mark my fucking words. You think you can get away with saying that shit to me over the Internet? Think again, fucker. As we speak I am contacting my secret network of spies across the USA and your IP is being traced right now so you better prepare for the storm, maggot. The storm that wipes out the pathetic little thing you call your life. You're fucking dead, kid. I can be anywhere, anytime, and I can kill you in over seven hundred ways, and that's just with my bare hands. Not only am I extensively trained in unarmed combat, but I have access to the entire arsenal of the United States Marine Corps and I will use it to its full extent to wipe your miserable ass off the face of the continent, you little shit. If only you could have known what unholy retribution your little "clever" comment was about to bring down upon you, maybe you would have held your fucking tongue. But you couldn't, you didn't, and now you're paying the price, you goddamn idiot. I will shit fury all over you and you will drown in it. You're fucking dead, kiddo.
+			nfinite poop. You sit on the toilet to poop, but the poop never stops coming out of your butt.
+			You have to start flushing the toilet every two minutes to keep up.
+			You try to pinch your butt closed but that makes your insides hurt.
+			The poop accelerates. You call 911. The paramedics call for doctors.
+			The doctors call for specialists. The story trends on Twitter. You turn down talk show appearances.
+			Your septic tank fails. People form a cult. Your toilet is finished. Volunteers arrive with buckets and shovels.
+			 You are completely used to the smell. The poop accelerates. You are moved to a stepladder with a hole in the top step.
+			  The poop accelerates. The shovelers abandon the buckets and shovel directly out the window. The poop accelerates.
+				 A candlelight vigil forms around your house. One of the workers falls over and can't free himself.
+				 The poop accelerates. A priest knocks over the stepladder and tackles you out the window.
+				 You land in the pile. The poop accelerates. The force now propels you forward and upward.
+				 Vigil goers grab at your legs.
+				 The poop ignites from their candles. The Facebook live event hits 1 million viewers.
+				 The poop accelerates. You are 30 feet in the air.
+				 The fire engulfs the vigil and your house. 60 feet. The poop accelerates.
+				 The torrent underneath you is deafening. 5 million Facebook live viewers.
+				 You try to close up shop but your butthole disintegrated long ago. 120 feet up.
+				 Your house explodes. The poop accelerates. 1000 feet.
 			</p>
 		</div>
 	</div>
-	
+
 	<footer>
 		<p>Author: Kai Zhang <br><br><a href="mailto:zhangkai@uw.edu">zhangkai@uw.edu</a> <br><br> Picture credit: Aimar Azis</p>
 	</footer>
