--- a/index.html
+++ b/index.html
@@ -38,24 +38,20 @@
 			<p>My God <br><br>
 			You actually found my website<br><br>
 			Im actully not sure what to put here so<br><br>
-			nfinite poop. You sit on the toilet to poop, but the poop never stops coming out of your butt.
-			You have to start flushing the toilet every two minutes to keep up.
-			You try to pinch your butt closed but that makes your insides hurt.
-			The poop accelerates. You call 911. The paramedics call for doctors.
-			The doctors call for specialists. The story trends on Twitter. You turn down talk show appearances.
-			Your septic tank fails. People form a cult. Your toilet is finished. Volunteers arrive with buckets and shovels.
-			 You are completely used to the smell. The poop accelerates. You are moved to a stepladder with a hole in the top step.
-			  The poop accelerates. The shovelers abandon the buckets and shovel directly out the window. The poop accelerates.
-				 A candlelight vigil forms around your house. One of the workers falls over and can't free himself.
-				 The poop accelerates. A priest knocks over the stepladder and tackles you out the window.
-				 You land in the pile. The poop accelerates. The force now propels you forward and upward.
-				 Vigil goers grab at your legs.
-				 The poop ignites from their candles. The Facebook live event hits 1 million viewers.
-				 The poop accelerates. You are 30 feet in the air.
-				 The fire engulfs the vigil and your house. 60 feet. The poop accelerates.
-				 The torrent underneath you is deafening. 5 million Facebook live viewers.
-				 You try to close up shop but your butthole disintegrated long ago. 120 feet up.
-				 Your house explodes. The poop accelerates. 1000 feet.
+			The Internet (or internet)[a] is the global system of interconnected
+			computer networks that uses the Internet protocol suite (TCP/IP)
+			to communicate between networks and devices.
+			It is a network of networks that consists of private, public, academic,
+			business, and government networks of local to global scope, linked by a broad array of
+			electronic, wireless, and optical networking technologies. The Internet carries a vast range of
+			information resources and services, such as the inter-linked hypertext documents and
+			applications of the World Wide Web (WWW), electronic mail, telephony, and file sharing.
+
+			The origins of the Internet date back to the development of packet switching and
+			research commissioned by the United States Department of Defense in the 1960s to enable t
+			ime-sharing of computers.[1] The primary precursor network, the ARPANET,
+			initially served as a backbone for interconnection of regional academic and military networks in the 1970s.
+			<br><i>Text from wikipedia article about the internet</i>
 			</p>
 		</div>
 	</div>
